tests/ui/field_representing_types/not-field-if-packed.old.stderr
error[E0277]: the trait bound `field_of!(MyStruct, 0): std::field::Field` is not satisfied
  --> $DIR/not-field-if-packed.rs:15:20
   |
LL |     assert_field::<field_of!(MyStruct, 0)>();
   |                    ^^^^^^^^^^^^^^^^^^^^^^ the nightly-only, unstable trait `std::field::Field` is not implemented for `field_of!(MyStruct, 0)`
   |
note: required by a bound in `assert_field`
  --> $DIR/not-field-if-packed.rs:11:20
   |
LL | fn assert_field<F: Field>() {}
   |                    ^^^^^ required by this bound in `assert_field`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
